; ModuleID = '/home/carl/AnghaBench/linux/drivers/soc/fsl/qbman/extr_bman_portal.c_bman_online_cpu.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/soc/fsl/qbman/extr_bman_portal.c_bman_online_cpu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bman_portal = type { i32 }
%struct.bm_portal_config = type { i32 }

@affine_bportals = common dso_local global %struct.bman_portal** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @bman_online_cpu to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bman_online_cpu(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.bman_portal*, align 8
  %5 = alloca %struct.bm_portal_config*, align 8
  store i32 %0, i32* %3, align 4
  %6 = load %struct.bman_portal**, %struct.bman_portal*** @affine_bportals, align 8
  %7 = load i32, i32* %3, align 4
  %8 = zext i32 %7 to i64
  %9 = getelementptr inbounds %struct.bman_portal*, %struct.bman_portal** %6, i64 %8
  %10 = load %struct.bman_portal*, %struct.bman_portal** %9, align 8
  store %struct.bman_portal* %10, %struct.bman_portal** %4, align 8
  %11 = load %struct.bman_portal*, %struct.bman_portal** %4, align 8
  %12 = icmp ne %struct.bman_portal* %11, null
  br i1 %12, label %14, label %13

13:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %27

14:                                               ; preds = %1
  %15 = load %struct.bman_portal*, %struct.bman_portal** %4, align 8
  %16 = call %struct.bm_portal_config* @bman_get_bm_portal_config(%struct.bman_portal* %15)
  store %struct.bm_portal_config* %16, %struct.bm_portal_config** %5, align 8
  %17 = load %struct.bm_portal_config*, %struct.bm_portal_config** %5, align 8
  %18 = icmp ne %struct.bm_portal_config* %17, null
  br i1 %18, label %20, label %19

19:                                               ; preds = %14
  store i32 0, i32* %2, align 4
  br label %27

20:                                               ; preds = %14
  %21 = load %struct.bm_portal_config*, %struct.bm_portal_config** %5, align 8
  %22 = getelementptr inbounds %struct.bm_portal_config, %struct.bm_portal_config* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load i32, i32* %3, align 4
  %25 = call i32 @cpumask_of(i32 %24)
  %26 = call i32 @irq_set_affinity(i32 %23, i32 %25)
  store i32 0, i32* %2, align 4
  br label %27

27:                                               ; preds = %20, %19, %13
  %28 = load i32, i32* %2, align 4
  ret i32 %28
}

declare dso_local %struct.bm_portal_config* @bman_get_bm_portal_config(%struct.bman_portal*) #1

declare dso_local i32 @irq_set_affinity(i32, i32) #1

declare dso_local i32 @cpumask_of(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
